Start index content and styles

--- a/index.html
+++ b/index.html
@@ -2,16 +2,28 @@
 <html>
 <html lang="en">
 
-  <head>This is a the header
-    <title>Title goes here</title>
+  <head>This is my cheesy Git Info page
+    <title>Git Info</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
   <body>
-    <h1>This is an H1 heading</h1>
-    <div>
-      <p>This is a paragraph</p>
-    </div>
+    <h1>Git Info</h1>
+    <a href="http://www.git-tower.com/blog/git-cheat-sheet-detail/" target="_blank">Git Cheat Sheet</a>
+    <h2>CREATE</h2>
+    <p>Clone an existing repo:</p>
+    <p class="code">git clone ssh://user@domain.com/repo.git</p>
+    <p>Create a new local repo:</p>
+    <p class="code">git init</p>
+    <br>
+    <h2>LOCAL CHANGES</h2>
+    <p>Changed files in your working directory:</p>
+    <p class="code">git status</p>
+    <p>Changes to tracked files:</p>
+    <p class="code">git diff</p>
+    <p>Add all current changes to the next commit:</p>
+    <p class="code">git add.</p>
+    <br>
   </body>
   
   <footer>This is the footer
